Correctif pour z-index du DatePicker dans les modals.
git-svn-id: svn+ssh://svn.projects.openwide.fr/svnroot/owsi-tools/trunk/owsi-core@2015 d3474844-eb8e-4abc-b058-2b321fed648b

--- a/owsi-core-components/owsi-core-component-wicket-more/src/main/java/fr/openwide/core/wicket/more/markup/html/template/css/modals.less
+++ b/owsi-core-components/owsi-core-component-wicket-more/src/main/java/fr/openwide/core/wicket/more/markup/html/template/css/modals.less
@@ -44,6 +44,10 @@
 			border-bottom: none;
 		}
 	}
+	
+	input.hasDatepicker {
+		z-index: 150;
+	}
 }
 
 // pour les anciennes modal basées sur fancybox
